--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.4",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "react-motion": "^0.5.2",
     "react-scripts": "4.0.3",
     "sass": "^1.42.1",
     "web-vitals": "^1.0.1"
