--- a/package.json
+++ b/package.json
@@ -24,12 +24,15 @@
     "sass": "^1.42.1",
     "web-vitals": "^1.0.1"
   },
+  "homepage": "http://gegeson.github.io/Portfolio",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "deploy": "yarn build && gh-pages -d build"
+
   },
   "eslintConfig": {
     "extends": [
@@ -48,5 +51,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
