--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/lab": "^4.0.0-alpha.60",
+    "@mui/icons-material": "^5.0.4",
     "@mui/lab": "^5.0.0-alpha.50",
     "@mui/material": "^5.0.3",
     "@testing-library/jest-dom": "^5.11.4",
@@ -32,7 +33,6 @@
     "eject": "react-scripts eject",
     "lint": "eslint .",
     "deploy": "yarn build && gh-pages -d build"
-
   },
   "eslintConfig": {
     "extends": [
